[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "marimo-graph"
version = "0.1.0"
description = "Generate Mermaid DAGs from Marimo notebook Python files"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Axel Pahl" }]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Visualization",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.scripts]
marimo-dag-to-mermaid = "marimo_dag_to_mermaid:main"

[tool.setuptools]
py-modules = ["marimo_dag_to_mermaid"]
